# lambdas_in_cpp

./: CMakeLists.txt  README.md
src/: main.cpp
src/common/: CMakeLists.txt
src/common/include/: log.h  print.h
src/common/src/: log.cpp  print.cpp
src/fn_pointers/: CMakeLists.txt
src/fn_pointers/include/: compare.h  fn_pointers.h  predicates.h
src/fn_pointers/src/: compare.cpp  fn_pointers.cpp  predicates.cpp
src/functors/: CMakeLists.txt
src/functors/include/: base_functor.h  functor_template.h  functors.h  operation_functor.h  predicates.h  transform_cases.h
src/functors/src/: functors.cpp
src/lambdas/: CMakeLists.txt
src/lambdas/include/: auto_lambdas.h  class_with_lambda.h  class_with_lambda_sample.h  closures.h  integration_fpointers_functors_lambas.h  lambdas.h  max_min_lambdas.h  stl_sample.h
src/lambdas/src/: auto_lambdas.cpp  class_with_lambda_sample.cpp  closures.cpp  lambdas.cpp  stl_sample.cpp
